--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -375,11 +375,11 @@ hr{
 	width: 100%;
 }
 .btn__download{
-	border: 2px solid #fff;
+	border: 2px solid #333;
 	border-radius: 5px;
 	font-size: 14px;
 	font-weight: 700;
-	color: #fff;
+	color: #333;
 	text-transform: uppercase;
 	text-decoration: none;
 	transition: bacground .2s linear, color .2s linear;
